# rust_grpc

./: .gitignore  Cargo.toml  build.rs
ctl/: Cargo.toml  build.rs
ctl/src/: main.rs
proto/: proxy.proto  service.proto
proxy/: Cargo.toml  build.rs
proxy/src/: main.rs
proxy/src/controller/: containers.rs  mod.rs  proxy.rs
proxy/src/gateway/: docker.rs  mod.rs  proxy.rs
proxy/src/handlers/: grpc.rs  mod.rs
src/: client.rs  server.rs
src/bonk/: mod.rs
src/controller/: mod.rs
src/controllers/: mod.rs
src/gateway/: mod.rs
src/gateways/: mod.rs
src/greatway/: mod.rs
src/handlers/: grpc.rs
