[package]
name = "rp_ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["full"] }
futures = { version = "*" }
clap = "*"
anyhow = "*"
serde_json = "*"
serde = {version = "*", features = ["derive"]}

[build-dependencies]
tonic-build = "*"