[package]
name = "rp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "*"
prost = "*"
tokio = { version = "*", features = ["full"] }
anyhow = "*"
uuid = { version = "*", features = ["serde", "v4"] }
bollard = "*"

[build-dependencies]
tonic-build = "*"